input fix bug example gap

--- a/src/assets/examples/input-overview/input-overview.component.css
+++ b/src/assets/examples/input-overview/input-overview.component.css
@@ -6,5 +6,8 @@
 
 .example-full-width {
   width: 100%;
+}
+
+.first-one {
   margin-bottom: 36px;
 }
